cluster-monitoring/prometheus-grafana/grafana-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: prometheus
    k8s-app: grafana
  name: grafana-service-loadbalancer
  namespace: prometheus
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    k8s-app: grafana
  type: LoadBalancer
