cluster-monitoring/prometheus-grafana/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
   - hosts:
       - prometheus.domain.com
     secretName: domain-com
  rules:
   - host: prometheus.domain.com
     http:
       paths:
        - path: /
          backend:
           serviceName: prometheus
           servicePort: 9090
